# torch_geopooling

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  devbox.json  pip.conf  pyproject.toml  ruff.toml  setup.cfg  setup.py
.ci/: devbox-3.10.json  devbox-3.11.json  devbox-3.12.json  devbox-3.8.json  devbox-3.9.json
.github/: FUNDING.yml
.github/workflows/: cmake.yaml  cxx_unit_test.yaml  pre_commit.yaml  python_build_wheel.yaml  python_unit_test.yaml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_templates/: class.rst  function.rst
docs/guide/: getting_started.ipynb  house_prices.ipynb  index.rst  pooling_polygons.ipynb  ship_speed_estimate.ipynb  spatial_embedding.ipynb
docs/reference/: functional.rst  index.rst  nn.rst  transforms.rst
docs/user_guide/: getting_started.rst  index.rst
include/: geopool.h  torch_geopooling.h
include/geopool/: exception.h  exception.hpp  nn.h  quadtree.h  quadtree.hpp  tile.h
include/torch_geopooling/: embedding.h  exception.h  formatting.h  functional.h  quadpool.h  quadrect.h  quadtree.h  quadtree_node.h  quadtree_options.h  quadtree_set.h  tile.h  torch_geopooling.h
setuptools_cxx/: __init__.py  build_ext.py  build_meta.py
src/: embedding.cc  embedding_op.h  quadpool.cc  quadpool_op.h  quadtree.cc  tensor_iterator.h  tile.cc
test/: CMakeLists.txt  embedding_op_test.cc  embedding_test.cc  max_quadpool_test.cc  quadpool_avg_test.cc  quadpool_linear_test.cc  quadpool_max_test.cc  quadpool_op_test.cc  quadpool_test.cc  quadrect_test.cc  quadtree_options.cc  quadtree_set_test.cc  quadtree_test.cc  testing.h  tile_test.cc
torch_geopooling/: __init__.py  functional.py  functional_test.py  nn.py  nn_test.py  return_types.py  tiling.py  transforms.py  transforms_test.py
torch_geopooling/__bind__/: python_module.cc  python_tuples.h
torch_geopooling/functional/: __init__.py  embedding.py  embedding_test.py  pooling.py  pooling_test.py
torch_geopooling/nn/: __init__.py  embedding.py  embedding_test.py  pooling.py  pooling_test.py
